# CSC173-DeepCV-Palarpalar

./: .gitignore  README.md  demo.ipynb  notebook.ipynb  prep.py  progress.md  proposal.md  pyproject.toml  stats.txt  train.py  train_stdout.txt
