[project]
name = "csc173-deepcv-palarpalar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "split-folders>=0.5.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
